@@ -38,6 +38,8 @@
       --add-opens com.azure.storage.blob.nio/com.azure.storage.blob.nio=ALL-UNNAMED
       --add-reads com.azure.storage.blob.nio=com.azure.http.netty
       --add-reads com.azure.storage.blob.nio=com.azure.core.http.okhttp
+      --add-reads com.azure.storage.blob.nio=com.azure.core.http.jdk.httpclient
+      --add-reads com.azure.storage.blob.nio=com.azure.core.http.vertx
     </javaModulesSurefireArgLine>
     <parallelizeLiveTests>concurrent</parallelizeLiveTests>
 
@@ -121,6 +123,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core-http-vertx</artifactId>
+      <version>1.0.0-beta.17</version> <!-- {x-version-update;unreleased_com.azure:azure-core-http-vertx;dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>4.11.0</version> <!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
@@ -160,4 +168,21 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>java12plus</id>
+      <activation>
+        <jdk>[12,)</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.azure</groupId>
+          <artifactId>azure-core-http-jdk-httpclient</artifactId>
+          <version>1.0.0-beta.12</version> <!-- {x-version-update;unreleased_com.azure:azure-core-http-jdk-httpclient;dependency} -->
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
